software/k8s-deployment/yaml/service_mesh/serviceentry.yml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: ServiceEntry
  metadata:
    name: auth0-ext
  spec:
    hosts:
    - keycloak-sso.apps.sno-demo.nixon.com
    location: MESH_EXTERNAL
    ports:
    - name: https
      number: 443
      protocol: HTTPS
    - name: http
      number: 80
      protocol: HTTP
    resolution: DNS
- apiVersion: networking.istio.io/v1beta1
  kind: ServiceEntry
  metadata:
    name: jaeger-ext
  spec:
    hosts:
    - jaeger-collector.istio-system-qm
    location: MESH_EXTERNAL
    ports:
    - name: http
      number: 14268
      protocol: HTTP
    resolution: DNS
- apiVersion: networking.istio.io/v1beta1
  kind: ServiceEntry
  metadata:
    name: external-demo
  spec:
    hosts:
    - docker-laptop
    location: MESH_EXTERNAL
    ports:
    - name: https
      number: 443
      protocol: HTTPS
    - name: http
      number: 80
      protocol: HTTP
    resolution: DNS
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
